<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="Team.RG.RaspiGuard.Fragments.ManageSensorFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="#2280d8"
        android:orientation="horizontal"
        android:padding="10dp"

        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/button_manageAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:layout_weight="0.62"
                        android:width="150dp"
                        android:padding="4dp"
                        android:text="@string/man_sen_title"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="4dip"
                        android:background="#ffffff"
                        android:paddingBottom="10dip" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.62"
                        android:width="150dp"
                        android:padding="3dp"
                        android:text="@string/man_sen_sub"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:height="10dp"
                            android:text="@string/man_sen_field"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/editText1"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="eg bedroom/front door"
                            android:inputType="textPersonName"
                            android:textSize="13dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:height="10dp"
                            android:text="@string/man_sen_field1"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="eg home/office"
                            android:inputType="textPersonName"
                            android:textSize="13dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/man_sen_radio" />

                        <RadioButton
                            android:id="@+id/rb2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/man_sen_radio1" />

                        <Button
                            android:id="@+id/button_add"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="0.59"
                            android:text="@string/man_sen_radio2btn" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="50dp"
                        android:layout_weight="0.62"
                        android:width="150dp"
                        android:padding="3dp"
                        android:text="@string/man_sen_sub2"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"

                            />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_del"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="70dp"
                        android:text="@string/man_sen_delete" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>