<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Team.RG.RaspiGuard.Fragments.MoistureFragment"

    >


    <!-- <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
         /> -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/toplayout">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/moisture_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/darkRed"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/w_toggle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <ToggleButton
            android:id="@+id/msAlarmSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:background="#2280d8"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/msSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/moisture_table"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/moisture_table1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/moisture_table2"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/moisture_table3"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/msSensorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/lightgrey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/msLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/lightgrey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/msStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/lightgrey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/msAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/lightgrey"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:background="#2280d8"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <ListView
            android:id="@+id/msActivityLog"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            tools:layout_editor_absoluteY="141dp"
            tools:listitem="@layout/item1" />
    </LinearLayout>

</LinearLayout>